# Code-team

./: .gitignore  Architecture.cpp  README.md  common_prtcl.cpp
Client/: .gitignore  ClientConnection.cpp  ClientConnection.h  Qt_part.pro  ServerConnection.cpp  ServerConnection.h  buttons.cpp  buttons.h  creator_of_tasks.cpp  creator_of_tasks.h  creator_of_tasks.ui  field.cpp  field.h  field.ui  game_field.cpp  game_field.h  game_field.ui  git_tool.cpp  git_tool.h  main.cpp  main_indicators.cpp  main_indicators.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_dial.cpp  my_dial.h  protocols.cpp  protocols.h  resourses.qrc  settings.cpp  settings.h  settings.ui  sliders.cpp  sliders.h  task.cpp  task.h  task_button.cpp  task_button.h  task_buttons_6.cpp  (+13 more)
Qt_part/: Qt_part.pro  mainwindow.cpp  mainwindow.ui  tool.h
Server/: CMakeCache.txt  CMakeLists.txt  Code-team.cbp  Makefile  cmake_install.cmake  tasks.json
Server/include/: Game.h  InitialData.h  Player.h  Server.h  ServerConnection.h  Task.h  Tool.h  protocols.h  tasklib.h
Server/src/: Game.cpp  Player.cpp  Server.cpp  ServerConnection.cpp  Task.cpp  Tool.cpp  add_tool_to_storage.cpp  main.cpp  tasklib.cpp
build-Qt_part-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Qt_part.Debug  object_script.Qt_part.Release  ui_mainwindow.h
build-Qt_part-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/: moc_buttons.cpp  moc_main_indicators.cpp  moc_mainwindow.cpp  moc_tool.cpp
connection_test/client/: CMakeLists.txt  main.cpp
connection_test/server/: CMakeLists.txt  main.cpp
game/: CMakeLists.txt
